query editor quality-of-life improvements

--- a/src/App/Components/EntityTable.scss
+++ b/src/App/Components/EntityTable.scss
@@ -1,5 +1,6 @@
 .EntityTable {
-    background: 'white';
-    color: '#3a3b4e';
-    border: '0.2px solid black';
+    padding: 2px;
+    // background: 'white';
+    // color: '#3a3b4e';
+    // border: '0.2px solid black';
 }
