--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,74 +1,141 @@
-.App {
-  font-family: "Fira Sans", sans-serif;
-  text-align: center;
-  // background-color: #ccc;
-  background: center center / 100% fixed url(
-   https://images.unsplash.com/photo-1562496146-d680d80e902b?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=720&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=1080
-    );
+@import './colors';
+@import url('https://fonts.googleapis.com/css?family=Nunito|Titillium+Web|Inconsolata&display=swap&weights=lighter|bolder');
 
-   // https://source.unsplash.com/random/1080x720/?computer
+code {
+  font-family: "Inconsolata" !important;
+}
+
+
+.App {
+  font-family: "Nunito", sans-serif;
+  font-weight: light;
+  text-align: center;
+  background-color: #eaeaea;
+  min-width: 1024px;
+  // background-color: rgba(255,255,255,0.5);
+  // background: center center / 100% fixed url(
+  //  https://images.unsplash.com/photo-1562496146-d680d80e902b?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=720&ixid=eyJhcHBfaWQiOjF9&ixlib=rb-1.2.1&q=80&w=1080
+    // );
 }
 
 .App-header {
-  // background-color: #282c34;
-  // min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 24px; ///calc(10px + 2vmin);
-  color: white;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: lighter;
+  font-size: 34.5px;
+  color: $outer-space;
+  background-color: white;
+  h1 { margin-top: 0; }
 }
 
-.App-main {
-  // color: #3a4e4f;
-  // padding: 10px;
+.App-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-left: 60px;
-  padding-right: 60px;
-  // padding: 10px;
-  /* margin: 10px; */
-  /* border: 1px solid rgba(128,128,128,0.2); */
+
+  .App-main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0px;
+    padding-top: 0px;
+    width: fit-content;
+  }
+  .QueryManager {
+    display: flex;
+    min-width: 900px;
+    
+    .SchemaAndData {
+      display: flex;
+      flex-flow: row;
+      .Data { display: flex; flex-flow: row; }
+    }
+    .TipsAndQuery {
+      min-width: 700px;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      .Tips { width: 200px; padding: 2px; }
+      .AeqlQuery {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-items: flex-start;
+        >* { display: flex; }
+        .Result {
+          // min-height: 300px;
+          // min-width: 400px; //fit-content
+        }
+      }
+    }
+  }
+}
+
+.Card {
+  box-shadow: 3px 3px 5px #324;
+  width: fit-content;
+  padding: 8px 50px;
+  p { margin:0; padding: 4px;}
+  code { font-size: 82.5%; margin-bottom: 10px }
+  // padding-top: 2px;
 }
 
 section {
-  /* margin: 0 auto; */
-  /* margin-bottom: 8px; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  // align-items: center;
-  // align-self: center;
-  width: fit-content;
-  // min-width: 80vh;
-  // margin: 10px auto;
   overflow: hide;
-  margin: 3px;
-  padding: 3px;
-  border: 1px solid #34464f;
+  margin: 18px;
+  margin-top: 5px;
   border-radius: 2px;
-  // opacity: 0.1;
   background-color: rgba(255,255,255,0.7);
 }
 
 table {
-  width: fit-content;
   border: 1px solid #eaeaea;
   color: #000;
-  background-color: white;
-  padding: 8px;
-  margin: 2px;
-  font-size: 11px;
-  td { border: 1px solid #eaeaea; padding: 24px; }
+  background-color: #fafefa;
+  padding: 1px;
+  font-size: 12px;
+  td {
+    border: 1px solid #eaeaea;
+    padding: 6px 4px;
+    font-size: 10px;
+    background-color: white;
+  }
 }
-
 
 textarea {
-  min-width: 80%;
+  width: 90%;
   min-height: 140px;
+  border: 1px solid gray;
+  background-color: #303a3c;
+  color: white;
+  border-radius: 24px;
+  padding: 22px;
+  margin: 10px;
+  font-family: "Inconsolata";
+  font-size: 140%;
+  &:focus, &:hover {
+    outline:0px !important;
+    -webkit-appearance: none;
+    box-shadow: none !important;
+  }
+}
+dl {
+  // font-size: 65%;
+  >* { margin-inline-start: 0; }
+dt { font-family: "Titillium Web"; margin-top: 8px; padding: 10px; }
+dd { font-weight: light; font-size: 12px; padding-bottom: 20px; }
 }
 
-dt { font-weight: bold; margin-top: 8px; }
+h1,h2,h3,h4,h5,h6 {
+  margin-bottom: 0px;
+  text-transform: uppercase;
+  font-size: 80%;
+  font-family: "Titillium Web";
+}
