--- a/src/App/Components/EntityTable.scss
+++ b/src/App/Components/EntityTable.scss
@@ -1,6 +1,3 @@
 .EntityTable {
-    padding: 2px;
-    // background: 'white';
-    // color: '#3a3b4e';
-    // border: '0.2px solid black';
+    table { padding: 5px; }
 }
