--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -152,8 +152,14 @@ dd { font-weight: light; font-size: 12px; padding-bottom: 20px; }
 }
 
 h1,h2,h3,h4,h5,h6 {
-  margin-bottom: 0px;
+  margin-bottom: 2px;
+  margin-top: 0px;
   text-transform: uppercase;
-  font-size: 80%;
+  // font-size: 80%;
   font-family: "Titillium Web";
 }
+h1 { font-size: 24px; }
+h2 { font-size: 18px; }
+h3 { font-size: 16px; }
+h4 { font-size: 14px; }
+h5 { font-size: 12px; }
